--- a/src/tree_view/lifeline.css
+++ b/src/tree_view/lifeline.css
@@ -43,3 +43,8 @@
   alignment-baseline: middle;
   pointer-events: none;
 }
+
+.lifeline .axis .axis-label {
+  fill: black;
+  font-size: 10pt;
+}
